[project]
name = "project"
version = "1.0.0"
description = "Implementation of the exercises and project for Mathematical Programming at TU Wien."
readme = "README.md"
authors = [
    { name = "Johannes Riedmann", email = "e52109935@student.tuwien.ac.at" },
    { name = "Hesham Morgan", email = "e12241537@student.tuwien.ac.at" }
]
requires-python = ">=3.12"
dependencies = [
    "gurobipy>=12.0.1",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
]

[project.scripts]
mathprog-ex1 = "mathprog_ex1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
